design image box

--- a/style/block.css
+++ b/style/block.css
@@ -12,7 +12,7 @@ h2{
     font-weight:600;
 }
 
-p{
+.frist-content-text{
     text-decoration:none;
     text-align:justify;
     font-size:20px;
@@ -20,4 +20,69 @@ p{
     line-height:0.7cm;
     background:#ddd;
     padding:20px 30px;
+}
+#image-box{
+    width:100%;
+    height:auto;
+}
+.container{
+    width:1080px;
+    margin:0px auto;
+}
+.inner-content{
+    width:340px;
+    display:block;
+    float:left;
+    margin-right:24px;
+    border:2px solid #dddddd;
+    margin-bottom:30px;
+    box-shadow: 10px 10px 20px;
+}
+.no-mar{
+    margin-right:0px;
+}
+.same-img{
+    width:300px;
+    height:400px;
+    padding:10px;
+    border:2px solid red;
+    border-radius:5px;
+    margin-bottom:15px;
+    display:block;
+    margin:10px auto;
+}
+.same-title{
+    margin-top:30px;
+    margin-bottom:15px;
+    text-align:center;
+    color:red;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size:25px;
+    font-weight:500;
+    padding:0px 5px;
+}
+
+.same-text{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:250;
+    font-size:16px;
+    color:#000000;
+    text-align:justify;
+    padding:5px 10px;
+}
+.btn{
+    width:100%;
+    background:#000000;
+    color:#ffffff;
+    display:block;
+    padding:10px 0px;
+    cursor:pointer;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:20px;
+    font-weight:300;
+}
+.btn:hover{
+    background-color:#dddddd;
+    color:red;
+    border:none;
 }
